# world-model

./: .gitignore  Cargo.toml  README.md  phase-0-direct-imports-audit.json  phase-0-direct-imports-triage.json  phase-0-direct-imports.json  phase-0-inventory.json  phase-0-scan-scope.json  phase-2-baseline-doc-coverage.json  phase-2-baseline-inventory.json  phase-2-snapshot-build-report.json  phase-2-snapshot-integrity-report.json  phase-4-migration-report.json  phase-6-release-report.json  phase-7-donor-ui-report.json  phase-8-integration-report.json  phase-9-donor-completeness-report.json  phase-9-donor-e2e-report.json  phase-9-exact-donor-ui-report.json  phase-9-rehost-matrix-report.json  phase_0_direct_imports_scan.py
.github/workflows/: phase-1-contracts.yml  phase-2-snapshots.yml
adapters/: concept-family-registry.yaml
adapters/adventure-generator/: manifest.yaml  snapshot-inventory.json
adapters/dawn-of-worlds/: manifest.yaml  snapshot-inventory.json
adapters/faction-image/: manifest.yaml  snapshot-inventory.json
adapters/mappa-imperium/: manifest.yaml  snapshot-inventory.json
adapters/mythforge/: manifest.yaml  snapshot-inventory.json
adapters/orbis/: manifest.yaml  snapshot-inventory.json
apps/donor-harness/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/donors/mythforge/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/donors/mythforge/src-tauri/scripts/: generate-icon-png.ps1  generate-icon.ps1  kill-cargo.ps1  kill-port-3000.ps1  png-to-ico.ps1
apps/donors/mythforge/src-tauri/src/: lib.rs  main.rs
apps/donors/mythforge/src-tauri/src/clients/: retry_policy.rs
apps/donors/mythforge/src-tauri/src/commands/: ollama.rs
apps/donors/mythforge/src-tauri/src/core/: error.rs
apps/donors/mythforge/src-tauri/src/ollama/: client.rs  mod.rs
apps/donors/mythforge/src-tauri/tests/: contract_tests.rs  ollama_generate.rs
apps/donors/mythforge/src-tauri/tests/fixtures/: parse_json_cases.json
apps/donors/mythforge/src-tauri/tests/harness/: assertions.rs  database.rs  mock_server.rs  mod.rs
apps/unified-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
contracts/json-schema/: AssetRecord.schema.json  CanonicalBundle.schema.json  CommandIssue.schema.json  CommandStatus.schema.json  EntityRecord.schema.json  EventEnvelope.schema.json  LocationAttachment.schema.json  MigrationRecord.schema.json  ProjectionRecord.schema.json  RelationRecord.schema.json  SchemaBindingRecord.schema.json  SimulationAttachment.schema.json  WorkflowAttachment.schema.json  WorkflowRecord.schema.json  WorldCommand.schema.json  WorldCommandRequest.schema.json  WorldCommandResponse.schema.json  WorldRecord.schema.json
contracts/promoted-schema/: AliasGroup.schema.json  ConceptAliasMap.schema.json  DroppedConceptRecord.schema.json  FieldDisposition.schema.json  FieldTypeHint.schema.json  PromotedConceptTarget.schema.json  PromotedDomainProfileContract.schema.json  PromotedFieldRecord.schema.json  PromotedGeneratedOutputReferenceContract.schema.json  PromotedLocationAdventureLinkageContract.schema.json  PromotedSchemaRecord.schema.json  PromotedSimulationEventPayloadContract.schema.json  SpecDonor.schema.json  (+15 more)
crates/world-model-adapters/: Cargo.toml
crates/world-model-adapters/src/: lib.rs  migration.rs
crates/world-model-driver/: Cargo.toml
crates/world-model-driver/src/: main.rs
crates/world-model-schema/: Cargo.toml
crates/world-model-schema/src/: lib.rs
crates/world-model-specs/: Cargo.toml
crates/world-model-specs/src/: lib.rs
docs/: ADAPTER_BOUNDARIES.md  CANONICAL_TRUNK_MODEL.md  MODEL_COMPARISON_MATRIX.md  PROMOTED_CONCEPT_INDEX.md  PROMOTION_RULES.md  PROVENANCE_AND_CONFLICTS.md  SPEC_SOURCE_REGISTRY.md  harness_checks.md
fixtures/: entity-record.json  event-envelope.json  world-record.json
scripts/: build_adapter_snapshots.py  check_phase_1_contracts.py  check_phase_2_snapshots.py  check_phase_4_migration.py  check_phase_6_release.py  check_phase_7_donor_ui.py  check_phase_8_integration.py  check_phase_9_exact_donor_ui.py  check_phase_9_exhaustive_donors.py  check_phase_9_rehost_matrix.py  cleanup_phase_outputs.py  cleanup_runtime.py  phase_2_utils.py  run_harness.py  validate_adapter_manifest.py
spec-sources/: adventure-generator.toml  mythforge.toml  orbis.toml
(+5220 files in other folders)
