[workspace]
members = [
  "crates/world-model-core",
  "crates/world-model-schema",
  "crates/world-model-specs",
  "crates/world-model-adapters",
  "crates/world-model-driver",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["OpenAI Codex"]
rust-version = "1.78"

[workspace.dependencies]
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.18"
regex = "1"
toml = "0.8"
walkdir = "2"
